--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html> <html><head>
-        <title>Unit 7/8 Project</title>
+        <title>Character Quiz</title>
         <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@300&amp;display=swap" rel="stylesheet">
 
     <script>function _typeof(obj) { "@babel/helpers - typeof"; if (typeof Symbol === "function" && typeof Symbol.iterator === "symbol") { _typeof = function _typeof(obj) { return typeof obj; }; } else { _typeof = function _typeof(obj) { return obj && typeof Symbol === "function" && obj.constructor === Symbol && obj !== Symbol.prototype ? "symbol" : typeof obj; }; } return _typeof(obj); }
